--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,1 +1,50 @@
-<p>project-list works!</p>
+<div *ngIf="loadProjectsPending$ | async">
+  <h2>Loading...</h2>
+  <mat-spinner> </mat-spinner>
+</div>
+<div *ngIf="deleteProjectPending$ | async">
+  <h2>Deleting...</h2>
+  <mat-spinner color="warn"> </mat-spinner>
+</div>
+<table mat-table [dataSource]="projects$" class="mat-elevation-z8">
+  <!-- Project Info Column -->
+  <ng-container matColumnDef="projectInfo">
+    <th mat-header-cell *matHeaderCellDef>Project Info</th>
+    <td mat-cell *matCellDef="let project">
+      {{ project.projectName }}
+    </td>
+  </ng-container>
+
+  <!-- Project Manager Column -->
+  <ng-container matColumnDef="projectManager">
+    <th mat-header-cell *matHeaderCellDef>Project Manager</th>
+    <td mat-cell *matCellDef="let project">
+      {{ project.projectManager }}
+    </td>
+  </ng-container>
+  <!-- Assigned to Column -->
+  <ng-container matColumnDef="assignedTo">
+    <th mat-header-cell *matHeaderCellDef>Assigned to</th>
+    <td mat-cell *matCellDef="let project">
+      {{ project.assignedTo }}
+    </td>
+  </ng-container>
+  <!-- Status Column -->
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let project">
+      {{ project.status }}
+    </td>
+  </ng-container>
+
+  <!-- Actions Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <td mat-cell *matCellDef="let project">
+      <mat-icon color="primary">edit</mat-icon>
+      <mat-icon color="primary">delete</mat-icon>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
