CH13 project list

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,5 @@
-<p>header works!</p>
+<p>
+  header
+  works!ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccss
+</p>
 <router-outlet></router-outlet>
