--- a/src/app/project/project-new/project-new.component.html
+++ b/src/app/project/project-new/project-new.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="loadEmployeesPending$ | async">
+  <h2>Loading...</h2>
+  <mat-spinner> </mat-spinner>
+</div>
+
 <div fxLayoutAlign="right">
   <mat-card fxFlex.xs="100" fxFlex="45">
     <form
@@ -30,6 +35,11 @@
       <mat-form-field appearance="fill">
         <mat-card-subtitle>Project Manager</mat-card-subtitle>
         <input matInput formControlName="manager" id="manager" required />
+        <mat-select formControlName="manager" id="manager" required>
+          <mat-option *ngFor="let employee of employeeList" [value]="employee"
+            >{{ employee.name }}
+          </mat-option>
+        </mat-select>
         <mat-error *ngIf="hasError('manager', 'required')"
           >Plase select one
         </mat-error>
