--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,3 @@
-<p>
-  header
-  works!ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccss
-</p>
+<div class="logo"><h3>Logo</h3></div>
+<div class="header"><h2>My projects</h2></div>
 <router-outlet></router-outlet>
