--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loadProjectsPending$ | async">
+<div *ngIf="loadProjectsPending$ | async" class="loading">
   <h2>Loading...</h2>
   <mat-spinner> </mat-spinner>
 </div>
