CH18 update header

--- a/src/app/project/project-new/project-new.component.html
+++ b/src/app/project/project-new/project-new.component.html
@@ -3,8 +3,8 @@
   <mat-spinner> </mat-spinner>
 </div>
 
-<div fxLayoutAlign="right">
-  <mat-card fxFlex.xs="100" fxFlex="45">
+<div class="newProject">
+  <mat-card fxFlex.xs="90" fxFlex="45">
     <form
       [formGroup]="formNew"
       (ngSubmit)="onSubmit()"
