--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,40 +1,44 @@
+.container{
+  margin-bottom: 100px;
+}
 .logo{
+  margin-top: 50px;
   margin-left: 20px;
   position: absolute;
-  width: 1440px;
+  width: 1200px;
   height: 56px;
   left: 0px;
   top: 0px;
-  background: #FFFFFF;
+  background:whitesmoke;
   border: 1px solid #D9D9D9;
 
 }
 .header{
+
+  margin-top: 50px;
   margin-left: 20px;
   position: absolute;
-width: 1440px;
+width: 1200px;
 height: 56px;
 left: 0px;
 top: 57px;
 
-background: #FFFFFF;
+background: whitesmoke;
 /* stroke / bottom */
 
 box-shadow: inset 0px -1px 0px #D9D9D9;
 }
 h2{
-  height: 32px;
-width: 114px;
-left: 48px;
-top: 69px;
-border-radius: nullpx;
+margin-left: 50px;
 
 }
 h3{
-  height: 32px;
-width: 40px;
-left: 48px;
-top: 12px;
-border-radius: nullpx;
-
+  margin-left: 50px;
+}
+button{
+  margin-left: 800px;
+  margin-bottom: 10px;
+}
+.headerContainer{
+  display: flex;
 }
