--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,23 @@
-<div class="logo"><h3>Logo</h3></div>
-<div class="header"><h2>My projects</h2></div>
+<div class="container">
+  <div class="logo"><h3>Logo</h3></div>
+  <div class="header">
+    <div class="headerContainer">
+      <h2>{{ header }}</h2>
+      <button
+        mat-raised-button
+        color="warn"
+        *ngIf="hasAddButton"
+        type="button"
+        (click)="onAdd()"
+      >
+        + Add Project
+      </button>
+      <div *ngIf="backArrow">
+        <button mat-button matTooltip="back to project list" (click)="onBack()">
+          <mat-icon>arrow_back</mat-icon>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
