--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -10,8 +10,9 @@
   <!-- Project Info Column -->
   <ng-container matColumnDef="projectInfo">
     <th mat-header-cell *matHeaderCellDef>Project Info</th>
-    <td mat-cell *matCellDef="let project">
-      {{ project.projectName }}
+    <td mat-cell mat-cell *matCellDef="let project">
+      {{ project.projectName }}<br />
+      <span>Creation date: {{ project.creationDate | date }}</span>
     </td>
   </ng-container>
 
@@ -19,14 +20,18 @@
   <ng-container matColumnDef="projectManager">
     <th mat-header-cell *matHeaderCellDef>Project Manager</th>
     <td mat-cell *matCellDef="let project">
-      {{ project.projectManager }}
+      <div class="account">
+        <mat-icon>account_circle</mat-icon> &nbsp; {{ project.projectManager }}
+      </div>
     </td>
   </ng-container>
   <!-- Assigned to Column -->
   <ng-container matColumnDef="assignedTo">
     <th mat-header-cell *matHeaderCellDef>Assigned to</th>
     <td mat-cell *matCellDef="let project">
-      {{ project.assignedTo }}
+      <div class="account">
+        <mat-icon>account_box</mat-icon> &nbsp;{{ project.assignedTo }}
+      </div>
     </td>
   </ng-container>
   <!-- Status Column -->
