--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -46,8 +46,13 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let project">
-      <mat-icon color="primary">edit</mat-icon>
-      <mat-icon color="primary">delete</mat-icon>
+      <mat-icon color="primary" class="action">edit</mat-icon>
+      <mat-icon
+        color="primary"
+        (click)="openDeleteDialog(project.id)"
+        class="action"
+        >delete</mat-icon
+      >
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
