--- a/src/app/project/project-new/project-new.component.css
+++ b/src/app/project/project-new/project-new.component.css
@@ -1,4 +1,13 @@
 .newProject{
 
   margin-top: 170px;
+  margin-left: 450px;
+}
+@media only screen and (max-width: 600px) {
+  .newProject {
+    margin-left: 40px;
+    width: 100%;
+  }
+
+
 }
