--- a/src/app/project/project-list/project-list.component.css
+++ b/src/app/project/project-list/project-list.component.css
@@ -1,7 +1,7 @@
 .mat-elevation-z8{
-margin-top: 180px;
-margin-left: 20px;
-width: 1200px;
+margin-top: 200px;
+margin-left: 50px;
+width: 1130px;
 height: 60px;
 left: 0px;
 top: 0px;
@@ -14,8 +14,15 @@ background: rgba(0, 0, 0, 0.02);
 box-shadow: inset 0px -1px 0px #D9D9D9;
 
 }
-.loading{
+
+.enabled{
+  width:59px;
+  height: 22px;
+  font-size: 12px;
   text-align: center;
+  padding-bottom: 30px;
+  padding-right: 60px;
+
 }
 span{
   font-size:x-small;
