--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -38,7 +38,9 @@
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let project">
-      {{ project.status }}
+      <button class="enabled" mat-raised-button disabled type="menu">
+        {{ project.status }}
+      </button>
     </td>
   </ng-container>
 
@@ -46,7 +48,9 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let project">
-      <mat-icon color="primary" class="action">edit</mat-icon>
+      <mat-icon color="primary" class="action" (click)="onEdit(project.id)"
+        >edit</mat-icon
+      >
       <mat-icon
         color="primary"
         (click)="openDeleteDialog(project.id)"
