--- a/src/app/project/project-new/project-new.component.html
+++ b/src/app/project/project-new/project-new.component.html
@@ -6,6 +6,14 @@
   <h2>Saving...</h2>
   <mat-spinner> </mat-spinner>
 </div>
+<div *ngIf="updatePending$ | async">
+  <h2>Updating...</h2>
+  <mat-spinner> </mat-spinner>
+</div>
+<div *ngIf="loadProjectPending$ | async">
+  <h2>Loading...</h2>
+  <mat-spinner> </mat-spinner>
+</div>
 
 <div class="newProject">
   <mat-card fxFlex.xs="90" fxFlex="45">
@@ -77,7 +85,7 @@
         color="warn"
         [disabled]="!formNew.valid"
       >
-        Create Project
+        {{ editMode ? "Save changes" : "Create project" }}
       </button>
     </form>
   </mat-card>
