--- a/src/app/project/project-new/project-new.component.css
+++ b/src/app/project/project-new/project-new.component.css
@@ -8,6 +8,13 @@
     margin-left: 40px;
     width: 100%;
   }
+  .spinner {
+    margin-left: 150px;
 
+  }
 
+}
+
+.spinner{
+  margin-left: 500px;
 }
