--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 .container{
   margin-bottom: 100px;
 }
+
 .logo{
   margin-top: 50px;
   margin-left: 20px;
@@ -42,4 +43,17 @@ button{
 }
 .headerContainer{
   display: flex;
+}
+.arrow{
+  margin-left: 0px;
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  .header {width: 360px; height: 40px; margin-left: 40px;}
+  .logo {width: 360px; margin-left: 40px;}
+  h2{font-size: 16px;}
+  button{margin-left:110px; width: 98px; font-size: 12px; height: 32px;}
+
+
 }
