--- a/src/app/project/project-list/project-list.component.css
+++ b/src/app/project/project-list/project-list.component.css
@@ -37,3 +37,11 @@ th{
 .action{
   cursor: pointer;
 }
+.spinner{
+  margin-left: 500px;
+}
+@media only screen and (max-width: 600px) {
+  .spinner {
+    margin-left: 150px;
+  }
+}
