--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="loadProjectsPending$ | async" class="loading">
-  <h2>Loading...</h2>
-  <mat-spinner> </mat-spinner>
+<div *ngIf="loadProjectsPending$ | async">
+  <h2 class="spinner">Loading...</h2>
+  <mat-spinner class="spinner"> </mat-spinner>
 </div>
 <div *ngIf="deleteProjectPending$ | async">
-  <h2>Deleting...</h2>
-  <mat-spinner color="warn"> </mat-spinner>
+  <h2 class="spinner">Deleting...</h2>
+  <mat-spinner color="warn" class="spinner"> </mat-spinner>
 </div>
 <table mat-table [dataSource]="projects$" class="mat-elevation-z8">
   <!-- Project Info Column -->
